-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 13
-
Component/s: hotspot
-
b22
minimal build:
$ make hotspot CONF=linux-x86_64-minimal
Building these configurations (matching CONF=linux-x86_64-minimal):
* linux-x86_64-minimal-fastdebug
* linux-x86_64-minimal-release
Building target 'hotspot' in configuration 'linux-x86_64-minimal-fastdebug'
Updating support/modules_libs/java.base/minimal/libjvm.so due to 11 file(s)
/home/aoqi/jdk/src/hotspot/share/compiler/disassembler.cpp: In static member function 'static void Disassembler::_hook(const char*, int, MacroAssembler*)':
/home/aoqi/jdk/src/hotspot/share/compiler/disassembler.cpp:1001:36: error: invalid use of incomplete type 'class MacroAssembler'
decode_env::hook(file, line, masm->code_section()->end());
^
In file included from /home/aoqi/jdk/src/hotspot/share/runtime/thread.hpp:38:0,
from /home/aoqi/jdk/src/hotspot/share/runtime/safepoint.hpp:30,
from /home/aoqi/jdk/src/hotspot/share/gc/shared/collectedHeap.hpp:34,
from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:37:
/home/aoqi/jdk/src/hotspot/share/runtime/javaFrameAnchor.hpp:36:7: error: forward declaration of 'class MacroAssembler'
class MacroAssembler;
^
At global scope:
cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
gmake[3]: *** [/home/aoqi/jdk/build/linux-x86_64-minimal-fastdebug/hotspot/variant-minimal/libjvm/objs/disassembler.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
gmake[2]: *** [hotspot-minimal-libs] Error 1
ERROR: Build failed for target 'hotspot' in configuration 'linux-x86_64-minimal-fastdebug' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-minimal_libjvm_objs_disassembler.o:
/home/aoqi/jdk/src/hotspot/share/compiler/disassembler.cpp: In static member function 'static void Disassembler::_hook(const char*, int, MacroAssembler*)':
/home/aoqi/jdk/src/hotspot/share/compiler/disassembler.cpp:1001:36: error: invalid use of incomplete type 'class MacroAssembler'
decode_env::hook(file, line, masm->code_section()->end());
^
In file included from /home/aoqi/jdk/src/hotspot/share/runtime/thread.hpp:38:0,
from /home/aoqi/jdk/src/hotspot/share/runtime/safepoint.hpp:30,
from /home/aoqi/jdk/src/hotspot/share/gc/shared/collectedHeap.hpp:34,
from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:37:
/home/aoqi/jdk/src/hotspot/share/runtime/javaFrameAnchor.hpp:36:7: error: forward declaration of 'class MacroAssembler'
class MacroAssembler;
^
At global scope:
... (rest of output omitted)
* All command lines available in /home/aoqi/jdk/build/linux-x86_64-minimal-fastdebug/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
Hint: Try searching the build log for '] Error'.
Hint: See doc/building.html#troubleshooting for assistance.
make[1]: *** [main] Error 1
make: *** [hotspot] Error 2
===============
zero build:
$ make hotspot CONF=linux-x86_64-zero
Building these configurations (matching CONF=linux-x86_64-zero):
* linux-x86_64-zero-fastdebug
* linux-x86_64-zero-release
Building target 'hotspot' in configuration 'linux-x86_64-zero-fastdebug'
Updating support/modules_libs/java.base/server/libjvm.so due to 11 file(s)
/home/aoqi/jdk/src/hotspot/share/compiler/abstractDisassembler.cpp:65:28: error: redefinition of 'bool AbstractDisassembler::_show_bytes'
bool AbstractDisassembler::_show_bytes = false; // set "true" to see what's in memory bit by bit
^
/home/aoqi/jdk/src/hotspot/share/compiler/abstractDisassembler.cpp:61:6: error: 'bool AbstractDisassembler::_show_bytes' previously defined here
bool AbstractDisassembler::_show_bytes = false; // set "true" to see what's in memory bit by bit
^
cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
gmake[3]: *** [/home/aoqi/jdk/build/linux-x86_64-zero-fastdebug/hotspot/variant-zero/libjvm/objs/abstractDisassembler.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
gmake[3]: *** wait: No child processes. Stop.
gmake[2]: *** [hotspot-zero-libs] Error 1
ERROR: Build failed for target 'hotspot' in configuration 'linux-x86_64-zero-fastdebug' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-zero_libjvm_objs_abstractDisassembler.o:
/home/aoqi/jdk/src/hotspot/share/compiler/abstractDisassembler.cpp:65:28: error: redefinition of 'bool AbstractDisassembler::_show_bytes'
bool AbstractDisassembler::_show_bytes = false; // set "true" to see what's in memory bit by bit
^
/home/aoqi/jdk/src/hotspot/share/compiler/abstractDisassembler.cpp:61:6: error: 'bool AbstractDisassembler::_show_bytes' previously defined here
bool AbstractDisassembler::_show_bytes = false; // set "true" to see what's in memory bit by bit
^
cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
* All command lines available in /home/aoqi/jdk/build/linux-x86_64-zero-fastdebug/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
Hint: Try searching the build log for '] Error'.
Hint: See doc/building.html#troubleshooting for assistance.
make[1]: *** [main] Error 1
make: *** [hotspot] Error 2
$ make hotspot CONF=linux-x86_64-minimal
Building these configurations (matching CONF=linux-x86_64-minimal):
* linux-x86_64-minimal-fastdebug
* linux-x86_64-minimal-release
Building target 'hotspot' in configuration 'linux-x86_64-minimal-fastdebug'
Updating support/modules_libs/java.base/minimal/libjvm.so due to 11 file(s)
/home/aoqi/jdk/src/hotspot/share/compiler/disassembler.cpp: In static member function 'static void Disassembler::_hook(const char*, int, MacroAssembler*)':
/home/aoqi/jdk/src/hotspot/share/compiler/disassembler.cpp:1001:36: error: invalid use of incomplete type 'class MacroAssembler'
decode_env::hook(file, line, masm->code_section()->end());
^
In file included from /home/aoqi/jdk/src/hotspot/share/runtime/thread.hpp:38:0,
from /home/aoqi/jdk/src/hotspot/share/runtime/safepoint.hpp:30,
from /home/aoqi/jdk/src/hotspot/share/gc/shared/collectedHeap.hpp:34,
from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:37:
/home/aoqi/jdk/src/hotspot/share/runtime/javaFrameAnchor.hpp:36:7: error: forward declaration of 'class MacroAssembler'
class MacroAssembler;
^
At global scope:
cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
gmake[3]: *** [/home/aoqi/jdk/build/linux-x86_64-minimal-fastdebug/hotspot/variant-minimal/libjvm/objs/disassembler.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
gmake[2]: *** [hotspot-minimal-libs] Error 1
ERROR: Build failed for target 'hotspot' in configuration 'linux-x86_64-minimal-fastdebug' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-minimal_libjvm_objs_disassembler.o:
/home/aoqi/jdk/src/hotspot/share/compiler/disassembler.cpp: In static member function 'static void Disassembler::_hook(const char*, int, MacroAssembler*)':
/home/aoqi/jdk/src/hotspot/share/compiler/disassembler.cpp:1001:36: error: invalid use of incomplete type 'class MacroAssembler'
decode_env::hook(file, line, masm->code_section()->end());
^
In file included from /home/aoqi/jdk/src/hotspot/share/runtime/thread.hpp:38:0,
from /home/aoqi/jdk/src/hotspot/share/runtime/safepoint.hpp:30,
from /home/aoqi/jdk/src/hotspot/share/gc/shared/collectedHeap.hpp:34,
from /home/aoqi/jdk/src/hotspot/share/precompiled/precompiled.hpp:37:
/home/aoqi/jdk/src/hotspot/share/runtime/javaFrameAnchor.hpp:36:7: error: forward declaration of 'class MacroAssembler'
class MacroAssembler;
^
At global scope:
... (rest of output omitted)
* All command lines available in /home/aoqi/jdk/build/linux-x86_64-minimal-fastdebug/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
Hint: Try searching the build log for '] Error'.
Hint: See doc/building.html#troubleshooting for assistance.
make[1]: *** [main] Error 1
make: *** [hotspot] Error 2
===============
zero build:
$ make hotspot CONF=linux-x86_64-zero
Building these configurations (matching CONF=linux-x86_64-zero):
* linux-x86_64-zero-fastdebug
* linux-x86_64-zero-release
Building target 'hotspot' in configuration 'linux-x86_64-zero-fastdebug'
Updating support/modules_libs/java.base/server/libjvm.so due to 11 file(s)
/home/aoqi/jdk/src/hotspot/share/compiler/abstractDisassembler.cpp:65:28: error: redefinition of 'bool AbstractDisassembler::_show_bytes'
bool AbstractDisassembler::_show_bytes = false; // set "true" to see what's in memory bit by bit
^
/home/aoqi/jdk/src/hotspot/share/compiler/abstractDisassembler.cpp:61:6: error: 'bool AbstractDisassembler::_show_bytes' previously defined here
bool AbstractDisassembler::_show_bytes = false; // set "true" to see what's in memory bit by bit
^
cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
gmake[3]: *** [/home/aoqi/jdk/build/linux-x86_64-zero-fastdebug/hotspot/variant-zero/libjvm/objs/abstractDisassembler.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
gmake[3]: *** wait: No child processes. Stop.
gmake[2]: *** [hotspot-zero-libs] Error 1
ERROR: Build failed for target 'hotspot' in configuration 'linux-x86_64-zero-fastdebug' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-zero_libjvm_objs_abstractDisassembler.o:
/home/aoqi/jdk/src/hotspot/share/compiler/abstractDisassembler.cpp:65:28: error: redefinition of 'bool AbstractDisassembler::_show_bytes'
bool AbstractDisassembler::_show_bytes = false; // set "true" to see what's in memory bit by bit
^
/home/aoqi/jdk/src/hotspot/share/compiler/abstractDisassembler.cpp:61:6: error: 'bool AbstractDisassembler::_show_bytes' previously defined here
bool AbstractDisassembler::_show_bytes = false; // set "true" to see what's in memory bit by bit
^
cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
* All command lines available in /home/aoqi/jdk/build/linux-x86_64-zero-fastdebug/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
Hint: Try searching the build log for '] Error'.
Hint: See doc/building.html#troubleshooting for assistance.
make[1]: *** [main] Error 1
make: *** [hotspot] Error 2
- relates to
-
JDK-8213084 Rework and enhance Print[Opto]Assembly output
-
- Resolved
-