8224568: minimal and zero build fails after JDK-8213084

Reviewed-by: shade, lucy